plugins {
	id 'org.springframework.boot' version '3.1.0'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'java'
	id 'eclipse'
}

//version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
//	flatDir {
//		dirs 'libs'
//	}
}

configurations {
    compile.exclude module: "spring-boot-starter-tomcat"
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-web' 
	implementation 'org.springframework.boot:spring-boot-starter-jetty'
	implementation 'org.junit.platform:junit-platform-commons:1.10.0'
	implementation files('libs/mssql-jdbc-12.4.1.jre11.jar')
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
	testImplementation 'org.junit.platform:junit-platform-engine:1.10.0'
}

test {
	useJUnitPlatform()
	jvmArgs '-Xshare:off'
	jvmArgs '-XX:+EnableDynamicAgentLoading'
}
